--- a/src/index.css
+++ b/src/index.css
@@ -302,13 +302,13 @@
 .marquee-content {
   display: flex;
   animation: marquee 25s linear infinite;
+  width: max-content;
 }
 
 .marquee-item {
   display: flex;
   flex-shrink: 0;
-  min-width: 100%;
-  justify-content: space-around;
+  gap: 1rem;
 }
 
 @keyframes marquee {
@@ -317,7 +317,7 @@
   }
 
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
   }
 }
 
